# Regularization-Continual-Learning-PyTorch

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
results/: result-ewc_unlearning.txt  results_ewc_lambda_5000.txt
src/: ewc_unlearning.py  main.py
src/ewc/: strategies.py  utils.py
tests/: test_import.py
