[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regularization-continual-learning-pytorch"
version = "0.1.0"
description = "Reference implementation of Elastic Weight Consolidation (EWC) for Split CIFAR-100"
readme = "README.md"
requires-python = ">=3.8"
authors = [ {name = "Fatemerjn"} ]
license = {text = "MIT"}
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "tqdm>=4.65",
]
